--- a/public/index.html
+++ b/public/index.html
@@ -7,19 +7,31 @@
 
   <script defer src="./js/app.js" charset="utf-8"></script>
   <script defer src="./js/controllers/mainCtrl.js" charset="utf-8"></script>
-  
+
   <link rel="stylesheet" href="./styles/main.css">
 
 </head>
 <body ng-app='mainApp' ng-controller="mainCtrl">
- 
-    
- 
- 
- 
+ <header id="mainHeader">
+   <div class="" id="mainHeaderTopDiv">
+     <img id="mainHeaderLogo" src="./images/bhfLogo2.png" alt="">
+     <img id="mainHeaderTitleImg" src="./images/bhfTitle2.png" alt="">
+   </div>
+   <nav id="mainHeaderPageNav">
+     <a href="#">About Us</a>
+     <a href="#">Shop</a>
+     <a href="#">Custom Furniture</a>
+     <a href="#">Gallery</a>
+     <a href="#">Contact</a>
+   </nav>
+ </header>
+
+
+
+
  <div ui-view class="" id="mainView">
-   
+
  </div>
- 
+
 </body>
 </html>
