add shop floor, database, and server connection

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
    </div>
    <nav id="mainHeaderPageNav">
      <a href="#">About Us</a>
-     <a href="#">Shop</a>
+     <a href="/#!/store">Shop</a>
      <a href="#">Custom Furniture</a>
      <a href="#">Gallery</a>
      <a href="#">Contact</a>
