--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
    <nav id="mainHeaderPageNav">
      <a href="#">About Us</a>
      <a href="/#!/store">Shop</a>
-     <a href="#">Custom Furniture</a>
+     <a href="/#!/customFurniture">Custom Furniture</a>
      <a href="#">Gallery</a>
      <a href="#">Contact</a>
    </nav>
