add backend connection to admin and shop, made shop work and filter, big brain thyme

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 
   <script defer src="./js/app.js" charset="utf-8"></script>
   <script defer src="./js/controllers/mainCtrl.js" charset="utf-8"></script>
+  <script defer src="./js/controllers/adminCtrl.js" charset="utf-8"></script>
 
   <link rel="stylesheet" href="./styles/main.css">
 
